fix codeblock overflow responsive grid

--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -1,12 +1,16 @@
-.highlight  {
-  background: #f8f8f8;
-  padding: 1px 1em;
-  border-radius: 3px;
+div.highlight  {
+  background: #f5f5f5;
+  border-radius: 4px;
   font-size: 1em;
   font-size: 0.9em;
-  overflow: auto;
-  margin: 1em -1em;
+  overflow: scroll;
+  margin: 1em 0;
 }
+
+div.highlight pre {
+  margin: 1em;
+}
+
 .highlight .c { color: #999988; font-style: italic } /* Comment */
 .highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
 .highlight .k { font-weight: bold } /* Keyword */
