--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -16,7 +16,6 @@ body {
   overflow-x: hidden;
   color: $color-text;
   font-size: 1rem;
-  max-width: 63em;
 
   @media (min-width: 820px) {
     font-size: 1.2rem;
@@ -152,15 +151,16 @@ nav {
 #notes-entry-container {
   display: grid;
   grid-gap: 2em;
-  grid-template-areas:
-    "content"
-    "side";
-
-  @media (min-width: 700px) {
-    grid-template-columns: 3fr 1fr;
-    grid-template-areas: "content side";
-  }
+  grid-template-columns: 3fr 1fr;
+  grid-template-areas: "content side";
 }
+
+  @media (max-width: 1200px) {
+    content, side {
+    grid-column: 1 / -1;
+    max-width: calc(100vw - 12vw);
+  }
+  }
 
 .backlink-box {
   background: $color-box-background;
@@ -172,6 +172,17 @@ code {
   background: #f5f5f5;
   padding: 0.1em 0.2em;
   border-radius: 4px;
+}
+
+pre code {
+  padding: 0;
+}
+
+pre {
+background: #f5f5f5;
+padding: 0.5em 1em;
+border-radius: 4px;
+overflow-x: scroll;
 }
 
 .invalid-link {
